--- a/index.html
+++ b/index.html
@@ -11,6 +11,31 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Find New People</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Chat</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled">Log-in</a> <!-- Disabled until we implement it-->
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>          
+    </header>
 </body>
 </html>
