--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rumble</title>
 
     <link rel="icon" type="image/png" sizes="16x16"  href="/favicons/favicon-16x16.png"> <!-- Favicon -->
     <meta name="msapplication-TileColor" content="#ffffff">
@@ -18,23 +18,23 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand">Rumble</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Find New People</a>
+                    <a class="nav-link" href="find.html">Find New People</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Chat</a>
+                    <a class="nav-link" href="chat.html">Chat</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled">Log-in</a> <!-- Disabled until we implement it-->
+                    <a class="nav-link" href="log-in.html">Log-in</a>
                   </li>
                 </ul>
               </div>
