--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Potato Clicker</title>
 
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> <!-- Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> <!-- Bootstrap js -->
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img class="potato" src="potato.png">
+    <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <img class="potato" src="potato.png">
+          </div>
+          <div class="col-sm-6">
+            <h1 class = "title">Stop eating ramen noodles,
+                instead eat potatoes!</h1>
+          </div>
+        </div>
+      </div>
 </body>
 </html>
