--- a/index.html
+++ b/index.html
@@ -6,21 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Potato Clicker</title>
 
-    <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> <!-- Bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> <!-- Bootstrap js -->
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico"> <!-- Links the favicon!-->
 
-    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> <!-- Bootstrap js -->
+
+    <link rel="stylesheet" href="style.css"> <!-- Links our stylesheet-->
+    <script src="script.js"></script> <!-- Links our java script file-->
+
 </head>
 <body>
     <div class="container">
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-sm-6 potato-container">
             <img class="potato" src="potato.png">
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-6 title-container">
             <h1 class = "title">Stop eating ramen noodles,
                 instead eat potatoes!</h1>
+              <br>
+              <div class="start-button">
+                <button type="button" onclick="startGame()" id="btn" class="btn btn-outline-light btn-lg">Start</button>
+              </div>
           </div>
         </div>
       </div>
