--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico"> <!-- Links the favicon!-->
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@900&display=swap" rel="stylesheet"> <!-- Links the font used from google fonts-->
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> <!-- Bootstrap js -->
 
@@ -36,20 +40,34 @@
     <div class="shop">
       <h1 id="shop-title">SHOP</h1>
       <ul>
-        <li><h2>Autoclicker</h2></li>
+        <li><h3>Mystery Recipe 1</h3></li>
+        <li><h3>Mystery Recipe 2</h3></li>
+        <li><h3>Mystery Recipe 3</h3></li>
+        <li><h3>Mystery Recipe 4</h3></li>
+        <li><h3>Mystery Recipe 5</h3></li>
+        <li><h3>Mystery Recipe 6</h3></li>
+        <li><h3>Mystery Recipe 7</h3></li>
+        <li><h3>Mystery Recipe 8</h3></li>
+        <li><h3>Mystery Recipe 9</h3></li>
+        <li><h3>Mystery Recipe 10</h3></li>
+        <br>
       </ul>
       <div class="potato-info">
         <h1>Why should you eat potatoes?</h1>
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <h2>Improve health</h2>
+              <h3>Potatoes are cost effective</h3>
+              <br>
+              <p>Potatoes last longer in the pantry than most other vegtables, meaning you can store them for longer without worrying about letting them go bad.
+                Moreover, potatoes provide a great return on investment with being the second most nutritional food item per penny.
+              </p>
             </div>
             <div class="carousel-item">
-              <h2>Improve diet</h2>
+              <h3>Potatoes give essential vitamins and nutrients</h3>
             </div>
             <div class="carousel-item">
-              <h2>Become healthy</h2>
+              <h3>Potatoes do not harm</h3>
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
