--- a/recipe-5.html
+++ b/recipe-5.html
@@ -49,18 +49,54 @@
                         <h4><br></h4>
                       </div>
 
-                  <div class="col-xs-3">
-                    
-            
-                    <ol>
-                        <h4><li>Preheat air fryer to 360°. Using a mandoline or vegetable peeler, cut potatoes into very thin slices.</li></h4>
-                        <h4><li>Transfer to a large bowl; add enough ice water to cover. Soak for 15 minutes; drain. Add more ice water and soak another 15 minutes.</li></h4>
-                        <h4><li>Drain potatoes; place on towels and pat dry. Spritz potatoes with cooking spray; sprinkle with salt.</li></h4>
-                        <h4><li>In batches, place potato slices in a single layer on greased tray in air-fryer basket. </li></h4>
-                        <h4><li>Cook until crisp and golden brown, 15-17 minutes, stirring and turning every 5-7 minutes. If desired, sprinkle with parsley.</li></h4>
-                    </ol>
               </div>
         </div>
+
+        <div class="potato-info">
+            <h1>Procedures</h1>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <h3>Step 1</h3>
+                  <br>
+                  <p><h3>Preheat air fryer to 360°. Using a mandoline or vegetable peeler, cut potatoes into very thin slices.</h3>
+                  </p>
+                </div>
+                <div class="carousel-item">
+                    <h3>Step 2</h3>
+                    <br>
+                    <p><h3>Transfer to a large bowl; add enough ice water to cover. Soak for 15 minutes; drain. Add more ice water and soak another 15 minutes.</h3>
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <h3>Step 3</h3>
+                    <br>
+                    <p><h3>Drain potatoes; place on towels and pat dry. Spritz potatoes with cooking spray; sprinkle with salt.<h3>
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <h3>Step 4</h3>
+                    <br>
+                    <p><h3>In batches, place potato slices in a single layer on greased tray in air-fryer basket.</h3>
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <h3>Step 5</h3>
+                    <br>
+                    <p><h3>Cook until crisp and golden brown, 15-17 minutes, stirring and turning every 5-7 minutes. If desired, sprinkle with parsley.</h3>
+                    </p>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
 
         <div class="col-xs-3">
             <h4><br></h4>
