--- a/recipe-4.html
+++ b/recipe-4.html
@@ -57,17 +57,50 @@
                         <h4><br></h4>
                       </div>
 
-                  <div class="col-xs-3">
-                    
-                
-                    <ol>
-                        <h4><li>In a skillet, heat oil over medium heat.</li></h4>
-                        <h4><li>Add potatoes; cook for 10 minutes, stirring occasionally.</li></h4>
-                        <h4><li>Stir in remaining ingredients.</li></h4>
-                        <h4><li>Cook and stir until potatoes are browned and tender, about 5 minutes longer..</li></h4>
-                    </ol>
               </div>
         </div>
+
+        <div class="potato-info">
+            <h1>Procedures</h1>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <h3>Step 1</h3>
+                  <br>
+                  <p><h3>In a skillet, heat oil over medium heat.</h3>
+                  </p>
+                </div>
+                <div class="carousel-item">
+                    <h3>Step 2</h3>
+                    <br>
+                    <p><h3>Add potatoes; cook for 10 minutes, stirring occasionally.</h3>
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <h3>Step 3</h3>
+                    <br>
+                    <p><h3>Stir in remaining ingredients.<h3>
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <h3>Step 4</h3>
+                    <br>
+                    <p><h3>Cook and stir until potatoes are browned and tender, about 5 minutes longer.</h3>
+                    </p>
+                </div>
+              </div>
+
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+
 
         <div class="col-xs-3">
             <h4><br></h4>
