--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
       potatoCount = potatoCount + autoClick;
       update()
   }
+  
+  load();
+
+  if (potatoCount == NaN)
+  {
+    potatoCount = 0;
+    autoClick = 0;
+  }
 
   setInterval(timer, 1000)
 </script>
@@ -111,8 +119,6 @@
 </html>
 
 <script>
-
-load();
 
   function add() { // Adds to the potato count
     potatoCount = potatoCount + 1
