--- a/index.html
+++ b/index.html
@@ -1,80 +1,172 @@
-body {
-    background-color: #694E4E;
-    font-family: 'Nunito', sans-serif;
-    overflow-x: hidden;
-}
+<!DOCTYPE html>
 
-p {
-    line-height: 2;
-}
+<script>
+  function update(){
+    document.getElementById('text').value = potatoCount
+    document.getElementById('amountAutoClick').innerHTML = "You own " + autoClick + " Auto Clickers";
+    document.getElementById('costAutoClick').innerHTML = ((autoClick+1) * 15 ) + " Potatoes";
+  }
+  var potatoCount = 0 // Stores variable for potatoes
+  var autoClick = 0 // Stores variable for autoclicker
 
-img {
-    padding: 3rem 3rem 5rem 25.7rem;
-}
+  function timer(){
+      potatoCount = potatoCount + autoClick;
+      update()
+  }
+ 
 
-a {
-    color: white;
-    text-decoration: none;
-}
+  setInterval(timer, 1000)
+</script>
 
-a:hover {
-    color: black;
-}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Potato Clicker</title>
 
-.buy:hover {
-    border-style: solid;
-    border-color: white;
-    color: white;
-}
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico"> <!-- Links the favicon!-->
 
-.counter {
-    color: white;
-    display: inline-block;
-    height: 12.5rem;
-    width: 20rem;
-    border-style: solid;
-    border-color: white;
-    text-align: center;
-    position: relative;
-    top: 37rem;
-    right: 25rem;
-}
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@900&display=swap" rel="stylesheet"> <!-- Links the font used from google fonts-->
 
-.shop {
-    background-color: #886F6F;
-    color: white;
-    display: inline-block;
-    position: absolute;
-    width: 40%;
-    height: 100%;
-    text-align: center;
-    padding: 3rem 3rem 0 3rem;
-}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> <!-- Bootstrap js -->
 
-#shop-title {
-    text-decoration: underline;
-}
+    <link rel="stylesheet" href="style.css"> <!-- Links our stylesheet-->
+    <script src="script.js"></script> <!-- Links our java script file-->
 
-.potato-info {
-    background-color: #694E4E;
-    height: 40%;
-}
+</head>
+<body>
+  <audio src="lobby.mp3" autoplay></audio>
 
-.carousel-inner {
-    padding: 1.5rem 5rem 0 5rem;
-}
+  <div class = "potato-class">
+    <audio id="sound1" src="pop.mp3" preload="auto"></audio><a href="#" onclick="document.getElementById('sound1').play(); add()"><img src="potato.png"></a>
+    <div class="counter">
+      <h1>YOU GOT:</h1>
+      <input type="text" id="text" disabled style="text-align:center;">
+      <h1>POTATOES</h1>
+      <button type="button" class="btn btn-outline-light"><a href="#" onClick="back()">Back</a></button>
+      <button type="button" class="btn btn-outline-light"><a href="#" onClick="save()">Save</a></button>
+      <button type="button" class="btn btn-outline-light"><a href="#" onClick="reset()">Reset</a></button>
+      <button type="button" class="btn btn-outline-light"><a href="#" onClick="load()">Load</a></button>
+      <br><br>
+      <button type="button" class="btn btn-outline-light"><a href="#" onClick="buyAutoClicker()">Buy auto clicker</a></button>
+      <p id="costAutoClick"> 15 Potatoes</p>
+      <p id="amountAutoClick"> You own 0 Auto Clickers</p>
+    </div>
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-.example::-webkit-scrollbar {
-  display: none;
-}
+    <div class="shop">
+      <h1 id="shop-title">Shop</h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <a href="recipe-1.html" onclick="reducePotato(50); save(); return confirm('50 potates have been deducted. Proceed to recipe 1~');"><h3>Recipe 1</h3></a>
+          </div>
+          <div class="col-md-3">
+            <a href="recipe-2.html" onclick="reducePotato(100); save(); return confirm('100 potates have been deducted. Proceed to recipe 2~');"><h3>Recipe 2</h3></a>
+          </div>
+          <div class="col-md-3">
+            <a href="recipe-3.html" onclick="reducePotato(150); save(); return confirm('150 potates have been deducted. Proceed to recipe 3~');"><h3>Recipe 3</h3></a>
+          </div>
+          <div class="col-md-3">
+            <a href="recipe-4.html" onclick="reducePotato(200); save(); return confirm('200 potates have been deducted. Proceed to recipe 4~');"><h3>Recipe 4</h3></a>
+          </div>
+          <div class="col-md-3">
+            <a href="recipe-5.html" onclick="reducePotato(250); save(); return confirm('250 potates have been deducted. Proceed to recipe 5~');"><h3>Recipe 5</h3></a>
+          </div>
+        </div>
+      </div>
+      <div class="potato-info">
+        <h1>Why should you eat potatoes?</h1>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <h3>Potatoes are cost effective</h3>
+              <br>
+              <p>Potatoes last longer in the pantry than most other vegtables, meaning you can store them for longer without worrying about letting them go bad.
+                Moreover, potatoes provide a great return on investment with being the second most nutritional food item per penny.
+              </p>
+            </div>
+            <div class="carousel-item">
+              <h3>Potatoes give essential vitamins and nutrients</h3>
+            </div>
+            <div class="carousel-item">
+              <h3>Potatoes do not harm</h3>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
 
-/* Hide scrollbar for IE, Edge and Firefox */
-.example {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-}
+<script>
+  
+  load();
 
-.why-potato {
-    text-align: left;
-}
+  function add() { // Adds to the potato count
+    potatoCount = potatoCount + 1
+    update()
+    var snd = newAudio("pop.mp3");
+    snd.play();
+    snd.currentTime=0;
+  }
+
+  function save() { // Saves the potato count to local storage
+      localStorage.setItem("potatoCount", potatoCount)
+      localStorage.setItem("autoClick", autoClick)
+  }
+
+  function load() { // Loads the potato count back into the game
+      potatoCount = localStorage.getItem("potatoCount")
+      potatoCount = parseInt(potatoCount)
+      
+      autoClick = localStorage.getItem("autoClick");
+      autoClick = parseInt(autoClick);
+
+      document.getElementById('text').value = potatoCount
+      
+  }
+
+  function reset() { // resets potato count to 0
+      potatoCount = 0;
+      autoClick = 0;
+      update()
+  }
+
+  function reducePotato(value){
+      potatoCount = potatoCount - value;
+      document.getElementById('text').value = potatoCount
+  }
+
+  function buyAutoClicker(){
+      if (potatoCount >= ((autoClick+1) * 15)){ // check if player has more potatoes than cost of ac
+          potatoCount -= ((autoClick+1) * 15) // remove 15 potatoes
+          autoClick = autoClick + 1;
+      }
+      update()
+  }
+
+  function back() {
+
+  }
+
+  function playSound() {
+    var snd = newAudio("pop.mp3");
+    snd.play();
+    snd.currentTime=0;
+  }
+
+  
+</script>
