--- a/index.html
+++ b/index.html
@@ -61,35 +61,44 @@
       <h1 id="shop-title">Shop</h1>
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-12">
             <a href="recipe-1.html" onclick="reducePotato(50); save(); return confirm('50 potates have been deducted. Proceed to recipe 1~');"><h3>Recipe 1</h3></a>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-12">
             <a href="recipe-2.html" onclick="reducePotato(100); save(); return confirm('100 potates have been deducted. Proceed to recipe 2~');"><h3>Recipe 2</h3></a>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-12">
             <a href="recipe-3.html" onclick="reducePotato(150); save(); return confirm('150 potates have been deducted. Proceed to recipe 3~');"><h3>Recipe 3</h3></a>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-12">
             <a href="recipe-4.html" onclick="reducePotato(200); save(); return confirm('200 potates have been deducted. Proceed to recipe 4~');"><h3>Recipe 4</h3></a>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-12">
             <a href="recipe-5.html" onclick="reducePotato(250); save(); return confirm('250 potates have been deducted. Proceed to recipe 5~');"><h3>Recipe 5</h3></a>
           </div>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
         </div>
       </div>
       <div class="potato-info">
-        <h1>Why should you eat potatoes?</h1>
+        <h1 id="potato-title">Why should you eat potatoes?</h1>
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
-            <div class="carousel-item active">
+            <div class="carousel-item active why-potato">
               <h3>Potatoes are cost effective</h3>
               <br>
               <p>Potatoes last longer in the pantry than most other vegtables, meaning you can store them for longer without worrying about letting them go bad.
                 Moreover, potatoes provide a great return on investment with being the second most nutritional food item per penny.
               </p>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item why-potato">
               <h3>Potatoes give essential vitamins and nutrients</h3>
             </div>
             <div class="carousel-item">
