--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <a href="recipe-1.html" onclick="reducePotato(50); save(); return confirm('50 potates have been deducted. Proceed to recipe 1~');"><h3>Recipe 1</h3></a>
+            <a href="recipe-1.html" onclick="reducePotato(50); save(); return confirm('50 potates have been deducted. Proceed to recipe 1~');"><h3>Recipe 1 - 50 potates </h3></a>
           </div>
           <div class="col-md-12">
-            <a href="recipe-2.html" onclick="reducePotato(100); save(); return confirm('100 potates have been deducted. Proceed to recipe 2~');"><h3>Recipe 2</h3></a>
+            <a href="recipe-2.html" onclick="reducePotato(100); save(); return confirm('100 potates have been deducted. Proceed to recipe 2~');"><h3>Recipe 2 - 100 potates</h3></a>
           </div>
           <div class="col-md-12">
-            <a href="recipe-3.html" onclick="reducePotato(150); save(); return confirm('150 potates have been deducted. Proceed to recipe 3~');"><h3>Recipe 3</h3></a>
+            <a href="recipe-3.html" onclick="reducePotato(150); save(); return confirm('150 potates have been deducted. Proceed to recipe 3~');"><h3>Recipe 3 - 150 potates</h3></a>
           </div>
           <div class="col-md-12">
-            <a href="recipe-4.html" onclick="reducePotato(200); save(); return confirm('200 potates have been deducted. Proceed to recipe 4~');"><h3>Recipe 4</h3></a>
+            <a href="recipe-4.html" onclick="reducePotato(200); save(); return confirm('200 potates have been deducted. Proceed to recipe 4~');"><h3>Recipe 4 - 200 potates</h3></a>
           </div>
           <div class="col-md-12">
-            <a href="recipe-5.html" onclick="reducePotato(250); save(); return confirm('250 potates have been deducted. Proceed to recipe 5~');"><h3>Recipe 5</h3></a>
+            <a href="recipe-5.html" onclick="reducePotato(250); save(); return confirm('250 potates have been deducted. Proceed to recipe 5~');"><h3>Recipe 5 - 250 potates</h3></a>
           </div>
           <br>
           <br>
