--- a/index.html
+++ b/index.html
@@ -93,22 +93,19 @@
           <div class="carousel-inner">
             <div class="carousel-item active why-potato">
               <h3>Potatoes are cost effective</h3>
-              <br>
               <p>Potatoes last longer in the pantry than most other vegtables, meaning you can store them for longer without worrying about letting them go bad.
                 Moreover, potatoes provide a great return on investment with being the second most nutritional food item per penny (with the skin on).
               </p>
             </div>
             <div class="carousel-item why-potato">
               <h3>Potatoes give essential vitamins and nutrients</h3>
-              <br>
               <p>
                 Potatoes contain nutrients like magnesium, fiber, potassium, and vitamins c, e, and k.
                 Furthermore, they are fat-free, sodium-free, cholestrol-free, and a medium white potato only contain about two grams of sugar.
               </p>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item why-potato">
               <h3>Potatoes do not harm</h3>
-              <br>
               <p>In 2010, one man conducted a study on himself by eating only potatoes for 2 months. At the end of the experiment,
                 they found that he lowered his cholesterol by 67, lowered his blood pressure and blood glucose, and lost 21 pounds.
                 In addition to this, studies have found that potatoes do not cause obesity, diabetes, or trigger inflammation.
