--- a/index.html
+++ b/index.html
@@ -93,22 +93,31 @@
           <div class="carousel-inner">
             <div class="carousel-item active why-potato">
               <h3>Potatoes are cost effective</h3>
+              <br>
               <p>Potatoes last longer in the pantry than most other vegtables, meaning you can store them for longer without worrying about letting them go bad.
-                Moreover, potatoes provide a great return on investment with being the second most nutritional food item per penny (with the skin on).
+                Moreover, potatoes provide a great return on investment with being the second most nutritional food item per penny.
               </p>
             </div>
             <div class="carousel-item why-potato">
-              <h3>Potatoes give essential vitamins and nutrients</h3>
-              <p>
-                Potatoes contain nutrients like magnesium, fiber, potassium, and vitamins c, e, and k.
-                Furthermore, they are fat-free, sodium-free, cholestrol-free, and a medium white potato only contain about two grams of sugar.
+              <h3>Potatoes have many essential vitamins and nutrients</h3>
+              <br>
+              <p>Potatoes are a great source of fibre, which helps you stay fuller for longer! They also play an essential role in keeping our cholesterol and blood
+                sugar levels in check. Potatoes also contain important B vitamins, complete proteins, and antioxidants.
               </p>
             </div>
             <div class="carousel-item why-potato">
-              <h3>Potatoes do not harm</h3>
-              <p>In 2010, one man conducted a study on himself by eating only potatoes for 2 months. At the end of the experiment,
-                they found that he lowered his cholesterol by 67, lowered his blood pressure and blood glucose, and lost 21 pounds.
-                In addition to this, studies have found that potatoes do not cause obesity, diabetes, or trigger inflammation.
+              <h3>Potatoes are extremely versatile</h3>
+              <br>
+              <p>Potatoes can be prepared in a variety of ways. You can have them boiled, baked, fried or steamed. From mashed potatoes to fries, there are a lot of 
+                ways to incorporate potatoes into your diet. Different varities like: fingerling, purple, red, white, yellow, baby give you different ways
+                to prepare and cook them.
+              </p>
+            </div>
+            <div class="carousel-item why-potato">
+              <h3>Potatoes are a super food</h3>
+              <br>
+              <p>Being the first vegetable to be grown in space, the potato holds a lot of importance in many peoples diets. Whether you are on a diet and need to stay full longer or
+                looking for a reliable source of carbohydrates and natural starches, the potato gets it done! 
               </p>
             </div>
           </div>
