--- a/index.html
+++ b/index.html
@@ -101,8 +101,15 @@
             <div class="carousel-item why-potato">
               <h3>Potatoes have many essential vitamins and nutrients</h3>
               <br>
-              <p>Potatoes are a great source of fibre, which helps you stay fuller for longer! They also play an essential role in keeping our cholesterol and blood
-                sugar levels in check. Potatoes also contain important B vitamins, complete proteins, and antioxidants.
+              <p>Potatoes contain nutrients like magnesium, fiber, potassium, and vitamins c, e, and k.
+                Furthermore, they are fat-free, sodium-free, cholestrol-free, and a medium white potato only contain about two grams of sugar.
+              </p>
+            </div>
+            <div class="carousel-item why-potato">
+              <h3>Potatoes do not harm</h3>
+              <p>In 2010, one man conducted a study on himself by eating only potatoes for 2 months. At the end of the experiment,
+                they found that he lowered his cholesterol by 67, lowered his blood pressure and blood glucose, and lost 21 pounds.
+                In addition to this, studies have found that potatoes do not cause obesity, diabetes, or trigger inflammation.
               </p>
             </div>
             <div class="carousel-item why-potato">
