--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="counter">
       <h1>YOU GOT:</h1>
       <input type="text" id="text" disabled style="text-align:center;">
-      <h1>POTATOES</h1>
+      <h1>POTATES</h1>
       <button type="button" class="btn btn-outline-light"><a href="#" onClick="back()">Back</a></button>
       <button type="button" class="btn btn-outline-light"><a href="#" onClick="save()">Save</a></button>
       <button type="button" class="btn btn-outline-light"><a href="#" onClick="reset()">Reset</a></button>
