--- a/recipe-1.html
+++ b/recipe-1.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sweet Corn and Potato Gratin</title>
     
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico"> <!-- Links the favicon!-->
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@900&display=swap" rel="stylesheet"> <!-- Links the font used from google fonts-->
