--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   function update(){
     document.getElementById('text').value = potatoCount
     document.getElementById('amountAutoClick').innerHTML = "You own " + autoClick + " Auto Clickers";
-    document.getElementById('costAutoClick').innerHTML = ((autoClick+1) * 15 ) + " Potatoes";
+    document.getElementById('costAutoClick').innerHTML = ((autoClick+1) * 15 ) + " Potates";
   }
   var potatoCount = 0 // Stores variable for potatoes
   var autoClick = 0 // Stores variable for autoclicker
@@ -53,7 +53,7 @@
       <button type="button" class="btn btn-outline-light"><a href="#" onClick="load()">Load</a></button>
       <br><br>
       <button type="button" class="btn btn-outline-light"><a href="#" onClick="buyAutoClicker()">Buy auto clicker</a></button>
-      <p id="costAutoClick"> 15 Potatoes</p>
+      <p id="costAutoClick"> 15 Potates</p>
       <p id="amountAutoClick"> You own 0 Auto Clickers</p>
     </div>
 
