--- a/recipe-5.html
+++ b/recipe-5.html
@@ -22,40 +22,30 @@
     <audio src="alt02-answer_020sec.mp3" autoplay></audio>
 
     <div class="potato-class"></div>
-        <a href="#" onclick="add()"><img src="AirFriedPotatoChips.jpg"></a>
+    <img class = "recipe-img" src="AirFriedPotatoChips.jpg">
         
         <div class="shop">
-            <h1 id="descriptions-title">Air-Fryer Potato Chips</h1>
+            <h1 id="descriptions-title">Air Fried Potato Chips</h1>
             <div class="container">
+                <br>
                 <div class="row">
-
-                    <div class="col-xs-3">
-                        <h4><br></h4>
-                      </div>
-
-                    <div class="col-md-3">
-                        <h4>2 large potatoes</h4>
+                    <div class="col-md-6 recipes">
+                        <h5>2 large potatoes</h5>
                     </div>
-                    
-                    <div class="col-md-3">
-                        <h4>Olive oil-flavored cooking spray</h4>
+                    <div class="col-md-6 recipes">
+                        <h5>Olive oil-flavored cooking spray</h5>
                     </div>
-                    <div class="col-md-3">
-                        <h4>1/2 teaspoon sea salt</h4>
+                    <div class="col-md-6 recipes">
+                        <h5>1/2 teaspoon sea salt</h5>
                     </div>
-                    <div class="col-md-3">
-                        <h4>Minced fresh parsley, optional</h4>
+                    <div class="col-md-6 recipes">
+                        <h5>Minced fresh parsley, optional</h5>
                     </div>
-
-                    <div class="col-xs-3">
-                        <h4><br></h4>
-                      </div>
-
               </div>
         </div>
 
         <div class="potato-info">
-            <br>
+            <br><br>
             <h1>Procedures</h1>
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
@@ -104,7 +94,7 @@
         <div class="col-xs-3">
             <h4><br></h4>
           </div>
-
+        <br><br><br><br><br><br>
         <div class="backButton">
             <button type="button" class="btn btn-outline-light"><a href="#" onClick="window.location.href='index.html'">Back</a></button>
           </div>
