--- a/recipe-2.html
+++ b/recipe-2.html
@@ -25,7 +25,7 @@
     <img class = "recipe-img" src="GrilledPotato.jpg">
         
         <div class="shop">
-            <h1 id="descriptions-title">Grilled Potato</h1>
+            <h1 id="descriptions-title"><br>Grilled Potato</h1>
             <div class="container">
                 <br>
                 <div class="row">
@@ -95,7 +95,7 @@
             </div>
           </div>
 
-          <br><br><br><br><br>
+          <br><br><br><br>
 
         <div class="backButton">
             <button type="button" class="btn btn-outline-light"><a href="#" onClick="window.location.href='index.html'">Back</a></button>
