--- a/recipe-4.html
+++ b/recipe-4.html
@@ -25,7 +25,7 @@
     <img class = "recipe-img" src="SkilletRedPotatoes.jpg">
         
         <div class="shop">
-            <h1 id="descriptions-title">Skillet Red Potatoes</h1>
+            <h1 id="descriptions-title"><br>Skillet Red Potatoes</h1>
             <div class="container">
                 <br>
                 <div class="row">
@@ -96,7 +96,7 @@
         <div class="col-xs-3">
             <h4><br></h4>
           </div>
-        <br><br><br><br><br>
+        <br><br><br><br>
         <div class="backButton">
             <button type="button" class="btn btn-outline-light"><a href="#" onClick="window.location.href='index.html'">Back</a></button>
           </div>
